# NEWone

./: .dockerignore  .env  .env.template  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
mysite/: log.txt  log.txt.1  log.txt.2  requirements.txt  shopapp_product_fixtures.xml  shopapp_products_fixtures.json
mysite/RSS/: apps.py  models.py  sitemap.py  urls.py  views.py
mysite/RSS/migrations/: 0001_initial.py
mysite/RSS/templates/RSS/: article_detail.html  articles_list.html
mysite/blogapp/: admin.py  models.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py
mysite/blogapp/templates/blogapp/: article_list.html  base.html
mysite/database/: db.sqlite3
mysite/myapiapp/: urls.py  views.py
mysite/myauth/: forms.py  models.py  tests.py  urls.py  views.py
mysite/myauth/migrations/: 0002_profile_avatar.py  0003_alter_profile_avatar.py  0004_alter_profile_avatar.py  0005_alter_profile_avatar.py  0006_alter_profile_user.py
mysite/myauth/templates/myauth/: about-me.html  user-details.html  users-list.html
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/shopapp/: admin.py  common.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
mysite/shopapp/management/commands/: agg.py  bulk_actions.py  create_order.py  selecting_fields.py
mysite/shopapp/migrations/: 0008_product_created_by.py  0009_order_receipt.py  0010_product_preview.py  0011_productimage.py  0012_alter_product_description_alter_product_name.py
mysite/shopapp/templates/admin/: csv_form.html
(+18 files in other folders)
